# setup-my-mac

./: .gitignore  Cargo.toml  README.md
src/: config.rs  examples.rs  main.rs  runner.rs  sudo.rs  util.rs
src/steps/: dotfiles.rs  git.rs  homebrew.rs  mod.rs  ssh.rs  system.rs
